corrected overlapping css

--- a/src/components/AnswerButtons.css
+++ b/src/components/AnswerButtons.css
@@ -1,4 +1,4 @@
-* {
+.answer-button-bg {
     background-color: rgb(255, 236, 209);
 }
 button {
