--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,4 @@
-* {
+.home-bg {
     background-color: rgb(255, 236, 209);
 }
 
