--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -13,6 +13,11 @@
     align-items: center;
 }
 
+.login-home-button{
+	top:2rem !important;
+	position: fixed;
+}
+
 .login-container{
     background-color: #fff;
 	border-radius: 10px;
@@ -48,6 +53,7 @@
   span {
 	font-size: 12px;
     z-index:100;
+	background: #fff;
 }
 
 input {
@@ -59,22 +65,24 @@ input {
 }
 
 
-a {
+.forgot-password {
 	color: #333;
 	font-size: 14px;
 	text-decoration: none;
 	margin: 15px 0;
+	background: #fff;
+}
+
+.login-heading{
+	background: #fff;
 }
 
 button {
 	border-radius: 20px;
-	border: 1px solid #15616D;
-	background-color: #15616D;
-	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
 	padding: 5px 2px;
-    width: 40%;
+    width: 40% !important;
     margin:2px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
@@ -183,3 +191,8 @@ form {
 	height: 40px;
 	width: 40px;
 }
+
+.social-container{
+	background: #fff;
+}
+
