--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -1,4 +1,4 @@
-*{
+.question-bg {
     background-color: rgb(255, 236, 209);
 }
 
